WebCore:

Reviewed by Darin Adler.

        - fix http://bugs.webkit.org/show_bug.cgi?id=17194
          Changing text to bold changes font family

        Test: platform/mac/fast/text/family-for-font-matched-by-name.html

        * platform/mac/WebFontCache.mm:
        (+[WebFontCache internalFontWithFamily:traits:size:]): Changed to use
        the family of the font whose name matches the desired family if there
        is no exact family match.

LayoutTests:

        Reviewed by Darin Adler.

        - test for http://bugs.webkit.org/show_bug.cgi?id=17194
          Changing text to bold changes font family

        * platform/mac/fast/text/family-for-font-matched-by-name-expected.checksum: Added.
        * platform/mac/fast/text/family-for-font-matched-by-name-expected.png: Added.
        * platform/mac/fast/text/family-for-font-matched-by-name-expected.txt: Added.
        * platform/mac/fast/text/family-for-font-matched-by-name.html: Added.



Canonical link: https://commits.webkit.org/23878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30066 268f45cc-cd09-0410-ab3c-d52691b4dbfc